--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
-@charset "UTF-8";
+.alinhamento{
 
-body
-{
-    background-color: rgb(245, 172, 172);
-    color: black;
-    font-size: 12pt;
-    font-family: Arial;
 }
 
-h1
-{
-    color: rgb(230, 113, 113);
+body{
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(168,148,233,1) 100%);
+    color: rgb(121, 45, 128);
+    font-size: 12pt;
+    font-family: Arial;
+    text-align: center;
+}
+
+a{
+    color: rgb(14, 1, 13);
     font-size: 20pt;
+}
+
+.maquiagem{
+    width: 450px;
 }
